--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,93 +1,74 @@
 @import '../../node_modules/purecss/build/pure.css';
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 /*-- Application stylesheets. -----------------------------------------------*/
 
-html, body {
-  position: relative;
-  height: 100%;
+body, html {
+    padding : 0;
+    margin : 0;
+    height : 100%;
+    overflow: hidden;
 }
 
-main {
-  position: relative;
-  height: 100%;
-  margin: 0 auto;
-  background-color: #FFF;
+#wrapper {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: -21px;
 }
 
-section.content {
-  padding-top: 26px;
-  width: 95%;
-  padding-left: calc(15% + 288px);
-  box-sizing: border-box;
+#header {
+    height:50px;
+    background: url('../img/logo.png');
+    width:100%;
+    font-size: 1rem;
+    font-weight: 300;
+    color: ghostwhite;
 }
 
-section.content h2 {
-  background-color: #E0E0E0;
-  padding: 25px;
-  margin-top: 159px;
-  height: 83px;
-  color: #616161;
-  font-variant: small-caps;
-  font-size: 41px;
-  padding-top: 10px;
-  width: 594px;
-  font-weight: bold;
+#header h1 {
+    font-size: 1.5rem;
+    padding: 12px;
 }
 
-nav {
-  background-color: #333;
-  height: 100%;
-  width: 288px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  padding-left: 15%;
-}
-
-nav h1 {
-  color: #FFF;
-  font-family: 'Roboto', sans-serif;
-  text-transform: uppercase;
-  text-align: right;
-  background-color: #4A86C1;
-  margin: 0;
-  padding: 15px;
-  padding-left: 30px;
-}
-
-nav hr {
-  border-bottom-color: #4A86C1;
-  border-top-width: 0;
-  margin-bottom: 30px;
-  margin-top: 0;
+#nav {
+    background-color:#999;
+    width:200px;
+    height:100%;
+    float:left;
+    overflow-x: auto;
 }
 
 nav a {
-  color: #FFF;
-  text-align: right;
-  display: block;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 19px;
-  padding: 15px;
+    color: #FFF;
+    text-align: right;
+    display: block;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 19px;
+    padding: 15px;
 }
 
 nav a:not(:last-child) {
-  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
 }
 
 nav a:hover {
-  background: #4A86C1;
+    background: #4A86C1;
 }
 
-nav .header {
-  height: 185px;
-	background: #333 url(../img/logo.png) no-repeat 34px 33px;
+#content {
+    height:100%;
+    overflow: auto;
+    padding: 1rem;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 200px;
+
 }
 
-header {
-  height: 185px;
-  margin-left: 300px;
+.h5 {
+    font-size: 0.5rem;
 }
