--- a/app/views/partials/nav.html
+++ b/app/views/partials/nav.html
@@ -1,11 +1,11 @@
-<nav>
-  <div class="header"></div>
-
-  <h1>Backbone Boilerplate</h1>
-
-  <hr>
-
-  <a href="#getting-started">Getting started</a>
-  <a href="#components">Components</a>
-  <a href="#components">Deployment</a>
-</nav>
+<ul>
+  <li>
+    <a href="#getting-started">Getting started</a>
+  </li>
+  <li>
+    <a href="#features">Features</a>
+  </li>
+  <li>
+    <a href="#development">Development</a>
+  </li>
+</ul>
